--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,47 +1,42 @@
 <% title t('.title') %>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-			<th>Address</th>
-			<th>Phone</th>
-			<th>Fax</th>
-			<th>Email</th>
-			<th>Website</th>
-      <th>Logo</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @sponsors.each do |sponsor| %>
-      <tr>
-        <td><%= link_to sponsor.title, sponsor_path(sponsor) %></td>
-        <td><%= sponsor.description %></td>
-        <td><%= sponsor.address %></td>
-        <td><%= sponsor.phone %></td>
-        <td><%= sponsor.fax %></td>
-        <td><% if !sponsor.email.nil? %><%= link_to sponsor.email, sponsor.email %><% end %></td>
-        <td><%= link_to sponsor.url, sponsor.url %></td>
-        <td>
-					<% if !sponsor.logo_file_name.nil? %>
-				  <%= image_tag sponsor.logo.url %>
-					<% end %>
-				</td>
-        <td>
-
-	  <% if user_signed_in? %>
-            <%= link_to 'Edit', edit_sponsor_path(sponsor), :class => 'btn btn-mini' %>
-            <%= link_to 'Destroy', sponsor_path(sponsor), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
-	  <% end %>
-
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <% if user_signed_in? %>
-<%= link_to 'New', new_sponsor_path, :class => 'btn btn-primary' %>
+	<div class="form-actions">
+		<%= link_to t('.app.buttons.new_sponsor'), new_sponsor_path, :class => 'btn btn-primary' %>
+	</div>
 <% end %>
+
+
+<% @sponsors.each do |sponsor| %>
+	<h3><%= link_to sponsor.title, sponsor_path(sponsor) %></h3>
+
+	<p>
+		<% if !sponsor.logo_file_name.nil? %>
+			<%= image_tag sponsor.logo.url, :style => "float: right; padding-left: 1em; padding-bottom: 1em;" %>
+		<% end %>
+		<%= truncate(sponsor.description, :length => 50, :separator => ' ') %>
+	</p>
+	<p>
+		<% if !sponsor.address.nil? %>
+		  <%= sponsor.address %>
+		<% end %>
+		<br />
+		<% if !sponsor.phone.nil? %>
+			<%= sponsor.phone %>
+		<% end %>
+		<% if !sponsor.fax.nil? %>
+			Fax: <%= sponsor.fax %>
+		<% end %>
+		<br />
+		<% if !sponsor.email.nil? %>
+			<%= link_to sponsor.email, sponsor.email %>
+		<% end %>
+		<% if !sponsor.url.nil? %>
+			<%= link_to sponsor.url, sponsor.url %>
+		<% end %>
+
+	</p>
+
+<% end %>
+
+
