--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,11 @@
 <h1><%= t('.title') %></h1>
 
+<% if user_signed_in? %>
+	<div class="form-actions">
+		<%= link_to t('app.buttons.new_category'), new_category_path, :class => 'btn btn-primary' %>
+	</div>
+<% end %>
+
 <table class="table table-striped">
   <tbody>
     <% @categories.each do |category| %>
@@ -18,6 +24,3 @@
   </tbody>
 </table>
 
-<% if user_signed_in? %>
-<%= link_to t('app.buttons.new_category'), new_category_path, :class => 'btn btn-primary' %>
-<% end %>
