--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -1,7 +1,9 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
 <% if is_html && user_signed_in? %>
+<div class="form-actions">
   <%= link_to t('app.buttons.new_event'), new_event_path, :class => "btn btn-mini" %>
+</div>
 <% end %>
 
 <table class="grid">
