--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -1,52 +1,77 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
+<% title @event.title %>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
-  <%= @event.title %>
-</p>
+<div id="time-container">
+	<div id="time-block">
+		<p>
+      <%= pretty_time(@event.start, @event.end) %>
+		</p>
+		<% if @event.start > DateTime.now %>
+		<p>
+			<div id="countdown">
+		  	<div id="time"></div>
+		  	<div id="time-abr" class="time-abr"></div>
+		  </div>
+		</p>
+		<% end %>
+	</div>
+	<div id="button-block">
+		<% if is_html %>
+			<p>
+				<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn btn-mini" %>
+			</p>
+			<p>
+				<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn btn-mini" %>
+			</p>
+
+			<% if user_signed_in? %>
+				<p>
+		    	<%= link_to t('app.buttons.list'), events_path, :class => 'btn' %>
+		     <%= link_to t('app.buttons.edit'), edit_event_path(@event), :class => 'btn' %>
+		     <%= link_to t('app.buttons.delete'), event_path(@event), :method => 'delete', :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-danger' %>
+				</p>
+			<% end %>
+		<% end %>
+
+	</div>
+	<div class="clear">&nbsp;</div>
+</div>
+
+<%= simple_format(@event.description) %>
 
 <p>
-  <b>Description:</b>
-  <%= @event.description %>
+	<strong>Event Contact Information</strong>
+	<% if !@event.address.nil? %>
+		<br />
+	  <%= @event.address %>
+	<% end %>
+	<% if !@event.phone.nil? %>
+		<br />
+		<%= @event.phone %>
+	<% end %>
+	<% if !@event.url.nil? %>
+		<br />
+		<%= link_to @event.url, @event.url %>
+	<% end %>
+
 </p>
 
+<% if !@event.categories.nil? && @event.categories.length > 0 %>
 <p>
-  <b>Start:</b>
-  <%= format_datetime(@event.start) %>
-</p>
-
-<p>
-  <b>End:</b>
-  <%= format_datetime(@event.end) %>
-</p>
-
-<p>
-  <b>Address:</b>
-  <%= @event.address %>
-</p>
-
-<p>
-  <b>Phone:</b>
-  <%= @event.phone %>
-</p>
-
-<p>
-  <b>Website:</b>
-  <%= link_to @event.url, @event.url %>
-</p>
-
-<p>
-  <b>Categories:</b>
+  <strong>Event Categories:</strong>
 	<% @event.categories.each_with_index do |c, i| %>
   	<% separator = ((@event.categories.count - 1) != i) ? ', ' : '' %>
   	<%= link_to c.title, category_events_path(c.title) %><%= separator %>
 	<% end %>
 </p>
+<% end %>
 
+<% if !@event.sponsors.nil? && @event.sponsors.length > 0 %>
 <p>
-  <b>Sponsors:</b>
+  <strong>Event Organizers:</strong>
 	<% @event.sponsors.each do |s| %>
 		<% if !s.logo_file_name.nil? %>
 	  	<%= link_to(image_tag(s.logo.url), sponsor_path(s)) %>
@@ -56,31 +81,8 @@
 
 	<% end %>
 </p>
-
-<p>
-	<div id="countdown">
-  	<div id="time"></div>
-  	<div id="time-abr" class="time-abr"></div>
-  </div>
-</p>
-
-<% if is_html %>
-  <p>
-		<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn btn-mini" %>
-		<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn btn-mini" %>
-  </p>
 <% end %>
-
 <div id='map'></div>
 
-<% if is_html %>
-  <div class="form-actions">
-		<%= link_to t('app.buttons.back'), events_path, :class => "btn btn-mini"  %>
-    <% if user_signed_in? %>
-      <%= link_to t('app.buttons.edit'), edit_event_path(@event), :class => 'btn' %>
-      <%= link_to t('app.buttons.delete'), event_path(@event), :method => 'delete', :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-danger' %>
-    <% end %>
-  </div>
-<% end %>
 
 
