--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -270,7 +270,7 @@ img {
         float: left;
       }
 
-      #content .menu > .item
+      #content .menu  .item
       {
         margin-top: 3px;
         display: block;
@@ -283,17 +283,17 @@ img {
         padding: 12px 0 13px 12px;
       }
 
-      #content .menu > a:first-child
+      #content .menu  a:first-child
       {
         margin-top: 0px !important;
       }
 
-      #content .menu > .item:hover
+      #content .menu  .item:hover
       {
         background: #fff;
       }
 
-      #content .menu > .selected
+      #content .menu  .selected
       {
         background: #fff;
       }
