--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,4 +1,5 @@
 /* styles for menu item pop-up */
+/*
 div.event_menu_popup ul {
 list-style-type: none; 
 }
@@ -34,3 +35,4 @@ div#category_menu_popup ul li.category_menu_popup_item a {
 	width: 100%;
 	padding: 1em;
 }
+*/
