--- a/app/views/shared/_menu_item.html.erb
+++ b/app/views/shared/_menu_item.html.erb
@@ -1,7 +1,7 @@
 <% if menu_item.nil? %>
-	<li class="event_menu_popup_item"><br /><%= t('app.msgs.no_events_for_date') %><br /></li>
+	<li><br /><%= t('app.msgs.no_events_for_date') %><br /></li>
 <% else %>
-	<li class="event_menu_popup_item">
+	<li>
 		<p><%= link_to menu_item.title, event_path(menu_item) %></p>
 		<p><%= format_time(menu_item.start) %> - <%= format_time(menu_item.end) %></p>
 		<p><%= truncate(menu_item.description, :length => 100) %></p>
