--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -44,17 +44,31 @@
 
 <p>
 	<strong>Event Contact Information</strong>
-	<% if !@event.address.nil? %>
+	<% if !@event.building_name.nil? && @event.building_name.length > 0 && !@event.address.nil? && @event.address.length > 0 %>
+		<br />
+	  <%= "#{@event.building_name}, #{@event.address}" %>
+	<% elsif !@event.building_name.nil? && @event.building_name.length > 0 %>
+		<br />
+	  <%= @event.building_name %>
+	<% elsif !@event.address.nil? && @event.address.length > 0 %>
 		<br />
 	  <%= @event.address %>
 	<% end %>
-	<% if !@event.phone.nil? %>
+	<% if !@event.phone.nil? && @event.phone.length > 0 %>
 		<br />
 		<%= @event.phone %>
 	<% end %>
-	<% if !@event.url.nil? %>
+	<% if !@event.url.nil? && @event.url.length > 0 && !@event.url2.nil?  && @event.url2.length > 0 %>
+		<br />
+	  <%= link_to @event.url, @event.url %>
+		&nbsp;&nbsp;
+		<%= link_to @event.url2, @event.url2 %>
+	<% elsif !@event.url.nil? && @event.url.length > 0  %>
 		<br />
 		<%= link_to @event.url, @event.url %>
+	<% elsif !@event.url2.nil? && @event.url2.length > 0  %>
+		<br />
+		<%= link_to @event.url2, @event.url2 %>
 	<% end %>
 
 </p>
