--- a/app/views/german_week/_search_form.html.erb
+++ b/app/views/german_week/_search_form.html.erb
@@ -2,6 +2,6 @@
   <p style="margin: 0px;">
     <%= text_field_tag :search, params[:search] %>
     <%= select_tag :category, options_for_select([['all','all']] + @categories.map {|c| [c.title, c.title]}, params[:category]) %>
-    <%= submit_tag "Search", :name => nil %>
+    <%= submit_tag t('app.buttons.search'), :name => nil %>
   </p>
 <% end %>
