--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -4,6 +4,8 @@
 
 
 <% if user_signed_in? %>
-	<%= link_to t('app.buttons.back'), pages_path, :class => "btn btn-mini"  %>
+<div class="form-actions">
+	<%= link_to t('app.buttons.list'), pages_path, :class => "btn btn-mini"  %>
+</div>
 <% end %>
 
