--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -3,6 +3,8 @@
 <%= render 'form' %>
 
 <% if user_signed_in? %>
-<%= link_to t('app.buttons.back'), pages_path, :class => "btn btn-mini"  %>
+<div class="form-actions">
+	<%= link_to t('app.buttons.list'), pages_path, :class => "btn btn-mini"  %>
+</div>
 <% end %>
 
