--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -101,6 +101,11 @@ img {
         text-transform: uppercase;
       }
 
+      .white-bg
+      {
+        background: #fff;
+      }
+
       #header > div
       {
         float: left;
@@ -192,31 +197,64 @@ img {
       {
         width: 100%;
         position: relative;
+     /*
+        margin: 10px auto 0px;
+        background: #d0d0d0;
+        max-width: 100%;
+        position: relative;
+        text-align: left;
+    */
+        overflow: hidden;
+        height: 300px;
+        margin: 0 auto;
       }
 
-      #slider > .overlay
+      #slider .container
+      {
+        width: 100%;
+        height: 100%;
+        position: relative;
+      }
+
+      #slider .container img
+      {
+        float: left;
+        position: absolute;
+        top: 0px;
+      }
+
+      #slider .container slider_img_0
+      {
+      }
+      #slider .container slider_img_1
+      {
+      }
+      #slider .container slider_img_2
+      {
+      }
+
+      #slider .overlay
       {
         position: absolute;
+        z-index: 200;
+        top: 0px;
+        left: 0px;
         background: url('images/slider-overlay.png');
         width: 100%;
         height: 100%;
-      }
-
-      #slider > img
-      {
-        height: 329px;
-        float: left;
       }
 
       h3.hidden
       {
         visibility: hidden;
         font-size: 0px;
+        width: 0px;
       }
 
       #content
       {
         position: relative;
+        z-index: 300;
         top: -44px;
         margin-bottom: -44px;
         padding: 10px;
@@ -300,15 +338,19 @@ img {
 
       #content-board
       {
-        width: 663px;
+        width: 715px;
+        /*
         padding: 0px 26px 26px 26px;
+        */
         float: left;
         background: #fff;
       }
 
       #content-board > table.grid
       {
-        width: 100%;
+        width: 663px;
+        margin-left: 26px;
+        margin-right: 26px;
       }
 
       #content-board > table tr
@@ -409,7 +451,6 @@ img {
 
       #footer .r1 .c3
       {
-        margin-right: 70px;
         color: #3d3d3d;
       }
 
