javascript now adds images to the slider

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 
             <table><tr><td>
 
-          <div class="menu def-font upcase" style="float: none;">
+          <div class="menu def-font upcase">
 <%
 =begin %>
 						<%= render "shared/menu" %>
