added ambassador msg to home page; made some small changes to app layout; added facebook like button

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -465,7 +465,7 @@ img {
         padding-top: 20px;
       }
 
-      #footer .r1 .c1, #footer .r1 .c2
+      #footer .r1 .c1, #footer .r1 .c2, #footer .r1 .c3, #footer .r1 .c4 
       {
         width: 144px;
       }
