--- a/app/views/german_week/index.html.erb
+++ b/app/views/german_week/index.html.erb
@@ -1,5 +1,5 @@
-<% title t('.title') %>
+<% title @page.title %>
 
-<!-- commenting out till it's completed -->
-<!--<div id="slider"></div>-->
+<%= simple_format(@page.description) %>
+
 
