--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,16 +33,6 @@
 
           <div class="top-row clear">
 
-            <div id="languages" class="def-font upcase">
-              <!--<a href="#">georgian</a>
-              <a href="#">english</a>-->
-              <% @locales.each do |locale| %>
-                <% unless locale.language.to_s == I18n.locale.to_s %> 
-                  <%= link_to locale.name, params.merge(:locale => locale.language) %>
-                <% end %>
-              <% end %>
-            </div><!--#languages-->
-          
             <div id="search_button_and_form">
               <div id="search_form_container">
                 <%= render 'german_week/search_form' %>
@@ -54,12 +44,15 @@
 
           </div><!--#header > .c3 .top-row-->
 
-          <div class="menu def-font upcase">
-            <span class="header"></span>
-						<%= link_to t('.about'), root_path, :class => "item" %>
-            <a href="#" class="item"><%= t('.comp') %></a>
-						<%= link_to t('.contact'), view_pages_path(:name => "contact"), :class => "item" %>
+          <div id="languages" class="def-font upcase menu">
+            <% @locales.each do |locale| %>
+              <% unless locale.language.to_s == I18n.locale.to_s %> 
+                <%= link_to locale.name, params.merge(:locale => locale.language) %>
+              <% end %>
+            <% end %>
           </div><!--#header .menu-->
+
+        </div><!--#header > .c3-->
 
         </div><!--#header > .c3-->
 
@@ -72,11 +65,6 @@
 
         <div class="container clear">
 
-            <div class="top-row clear">
-              <div class="menu-header">day</div>
-              <div class="content-header">uhr</div>
-              <div class="content-header">uhr</div>
-            </div><!--#content .container .top-row-->
 
             <table><tr><td>
 
@@ -165,9 +153,7 @@
 
             <div class="menu">
               <span class="header"><%= t('.menu') %></span>
-						  <%= link_to t('.about'), root_path, :class => "item" %>
-              <a href="#" class="item"><%= t('.comp') %></a>
-  						<%= link_to t('.contact'), view_pages_path(:name => "contact"), :class => "item" %>
+							<%= link_to t('.contact'), view_pages_path(:name => "contact"), :class => "item" %>
             </div><!--#footer .r1 .c1 .menu-->
 
           </div><!--#footer .r1 .c1-->
@@ -183,7 +169,7 @@
 
           </div><!--#footer .r1 .c2-->
 
-          <div class="c2 def-font upcase">
+          <div class="c3 def-font upcase">
 
             <div class="menu">
               <span class="header"><%= t('.admin') %></span>
@@ -191,30 +177,20 @@
 									<%= link_to t('.events'), events_path, :class => "item" %>
 									<%= link_to t('.categories'), categories_path, :class => "item" %>
 									<%= link_to t('.sponsors'), sponsors_path, :class => "item" %>
-									<%= link_to t('.sign_out'), destroy_user_session_path, :method => :delete %>  
+									<%= link_to t('.pages'), pages_path, :class => "item" %>
+									<%= link_to t('.sign_out'), destroy_user_session_path, :method => :delete, :class => "item" %>  
 								<% else %>  
-									<%= link_to t('.sign_up'), new_user_registration_path %> or  
-									<%= link_to t('.sign_in'), new_user_session_path %>  
+									<%= link_to t('.sign_up'), new_user_registration_path, :class => "item" %> or  
+									<%= link_to t('.sign_in'), new_user_session_path, :class => "item" %>  
 								<% end %>  
-            </div><!--#footer .r1 .c2 .menu-->
-
-          </div><!--#footer .r1 .c2-->
-
-          <div class="c3">
-
-            <div class="r1 clear">
-							<%= render :inline => addthis_share_button %>
-						</div>
-
-            <div class="r2 clear def-font upcase">
-              <div>
-                ihre e-email:&nbsp;
-                <input type="text" class="upcase" />
-              </div>
-              <div>rss</div>
-            </div>
+            </div><!--#footer .r1 .c3 .menu-->
 
           </div><!--#footer .r1 .c3-->
+
+          <div class="c4">
+								<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fde-de.facebook.com%2FDeutscheBotschaftTiflis&amp;send=false&amp;layout=standard&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:35px;" allowTransparency="true"></iframe>
+							<%= render :inline => addthis_share_button %>
+          </div><!--#footer .r1 .c4-->
 
         </div><!--#footer .r1-->
 
