--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b><%= t('app.common.description') %>:</b>
-  <%= @page.description %>
+  <%= simple_format(@page.description) %>
 </p>
 
 
