--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -179,7 +179,7 @@
 									<%= link_to t('.pages'), pages_path, :class => "item" %>
 									<%= link_to t('.sign_out'), destroy_user_session_path, :method => :delete, :class => "item" %>  
 								<% else %>  
-									<%= link_to t('.sign_up'), new_user_registration_path, :class => "item" %> or  
+									<%= link_to t('.sign_up'), new_user_registration_path, :class => "item" %>
 									<%= link_to t('.sign_in'), new_user_session_path, :class => "item" %>  
 								<% end %>  
             </div><!--#footer .r1 .c3 .menu-->
@@ -187,7 +187,8 @@
           </div><!--#footer .r1 .c3-->
 
           <div class="c4">
-								<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fde-de.facebook.com%2FDeutscheBotschaftTiflis&amp;send=false&amp;layout=standard&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:35px;" allowTransparency="true"></iframe>
+								<iframe src="//www.facebook.com/plugins/like.php?href=http://de-de.facebook.com%2FDeutscheBotschaftTiflis&amp;send=false&amp;layout=standard&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:35px;" allowTransparency="true"></iframe>
+								
 							<%= render :inline => addthis_share_button %>
           </div><!--#footer .r1 .c4-->
 
