--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -32,3 +32,25 @@
 #time-container {	}
 #time-container #time-block {float: left; width: 60%;}
 #time-container #button-block {float: right; width: 40%; text-align: center;}
+
+/* image caption styles */
+div.event_picture_container {
+	margin: 0 10px 10px 10px;
+	border: 1px solid #ccc;
+	padding: 5px;
+	background-color: #ddd;
+}
+
+div.event_picture_container img {
+	margin: 0;
+	padding:0;
+}
+
+div.event_picture_container p {
+	margin: 5px 0 0 0;
+	padding: 5px;
+	border-top: 1px #ddd dotted;
+	font-size: .9em;
+	text-align: center;
+}
+
