--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -187,9 +187,16 @@
           </div><!--#footer .r1 .c3-->
 
           <div class="c4">
-								<iframe src="//www.facebook.com/plugins/like.php?href=http://de-de.facebook.com%2FDeutscheBotschaftTiflis&amp;send=false&amp;layout=standard&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:35px;" allowTransparency="true"></iframe>
-								
-							<%= render :inline => addthis_share_button %>
+						<!-- facebook -->
+<div class="fb-like" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
+
+<div class="fb-subscribe" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-layout="button_count" data-show-faces="true" data-width="150"></div>
+						
+						<!-- twitter -->
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://deutschewoche.ge/" data-text="Check out Deutsche Woche in Georgia">Tweet</a>
+
+						<!-- google+ -->
+						<g:plusone size="medium" annotation="inline" width="150"></g:plusone>
           </div><!--#footer .r1 .c4-->
 
         </div><!--#footer .r1-->
@@ -213,5 +220,25 @@
 			I18n.locale = "<%= I18n.locale %>";
 		<% end %>
 
-  </body>
+		<!-- facebook -->
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
+		<!-- twitter -->
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>  
+		<!-- google+ -->
+		<script type="text/javascript">
+		  (function() {
+		    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		    po.src = 'https://apis.google.com/js/plusone.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>		
+		</body>
 </html>
