change styles for buttons

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
 	<div class="form-actions">
-	  <%= f.submit nil, :class => 'btn btn-primary' %>
+	  <%= f.submit nil, :class => 'btn btn-mini' %>
 	  <%= f.submit nil, :class => 'btn btn-danger', :type => :reset, :value => t('app.buttons.reset'), :name => :reset %>
 	  <%= link_to t('app.buttons.cancel'), categories_path, :class => 'btn' %>
 	</div>
