--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if user_signed_in? %>
 	<div class="form-actions">
-		<%= link_to t('app.buttons.new_category'), new_category_path, :class => 'btn btn-primary' %>
+		<%= link_to t('app.buttons.new_category'), new_category_path, :class => 'btn btn-mini' %>
 	</div>
 <% end %>
 
