--- a/app/views/sponsors/_form.html.erb
+++ b/app/views/sponsors/_form.html.erb
@@ -80,7 +80,7 @@
 	<% end %>
 
 	<div class="form-actions">
-	  <%= f.submit nil, :class => 'btn btn-primary' %>
+	  <%= f.submit nil, :class => 'btn btn-mini' %>
 	  <%= f.submit nil, :class => 'btn btn-danger', :type => :reset, :value => t('app.buttons.reset'), :name => :reset %>
 	  <%= link_to t('app.buttons.cancel'), sponsors_path, :class => 'btn' %>
 	</div>
