--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -174,7 +174,7 @@
 
           <div class="c4">
 						<!-- facebook -->
-<div class="fb-like" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
+<div class="fb-like" data-href="http://www.deutschewoche.ge/" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
 
 <div class="fb-subscribe" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-layout="button_count" data-show-faces="true" data-width="150"></div>
 						
