got pdf working on event day page; updated day and category actions so if requesting pdf, getting all data with no pagination

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,6 +2,6 @@
 
 <% if !@events.nil? && @events.length > 0 %>
 <div class="form-actions">
-	<%= link_to t('app.buttons.pdf'), events_path(:format => 'pdf'), :class => "btn btn-mini" %>
+	<%= link_to t('app.buttons.pdf'), events_path(:format => 'pdf'), :class => "btn btn-mini", :target => "_blank" %>
 </div>
 <% end %>
