--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -9,7 +9,7 @@
 		<p>
       <%= pretty_time(@event.start, @event.end) %>
 		</p>
-		<% if @event.start > DateTime.now %>
+		<% if @event.start > DateTime.now && is_html %>
 		<p>
 			<div id="countdown">
 		  	<div id="time"></div>
@@ -21,7 +21,7 @@
 	<div id="button-block">
 		<% if is_html %>
 			<p>
-				<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn btn-mini" %>
+				<%= link_to t('app.buttons.pdf'), event_path(@event, :format => 'pdf'), :class => "btn btn-mini", :target => "_blank", :target => "_blank" %>
 			</p>
 			<p>
 				<%= link_to t('app.buttons.ics'), events_exportICS_path(:type => "event", :typespec => @event.id), :class => "btn btn-mini" %>
@@ -102,7 +102,8 @@
 	<% end %>
 </p>
 <% end %>
-<div id='map'></div>
-
+<% if is_html %>
+	<div id='map'></div>
+<% end %>
 
 
